namespace KBMS.Parser.Ast;

/// <summary>
/// Base class for DDL (Data Definition Language) statements
/// </summary>
public abstract class KdlNode : AstNode
{
}
